# rust-uchat

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  Trunk-release.win.toml  Trunk.win.toml  justfile
backend/crypto/src/: sign.rs
backend/query/: Cargo.toml
backend/query/src/: post.rs  schema.rs  session.rs  test_db.rs  user.rs  util.rs
backend/server/: Cargo.toml
backend/server/src/: error.rs  extractor.rs  handler.rs  lib.rs  logging.rs  router.rs
backend/server/src/handler/: post.rs  user.rs
frontend/: Cargo.toml  README.md
frontend/src/: app.rs  components.rs  main.rs  page.rs  tailwind.css  util.rs
frontend/src/components/: app_bar.rs  bar_button.rs  button.rs  keyed_notification_box.rs  local_profile.rs  navbar.rs  post.rs  sidebar.rs  toaster.rs
frontend/src/components/post/: action_bar.rs  content.rs  posts_list.rs  quick_respond.rs
frontend/src/page/: edit_profile.rs  home.rs  login.rs  new_post.rs  register.rs  trending.rs  view_profile.rs
frontend/src/page/home/: bookmarked.rs  home_app_bar.rs  liked.rs
frontend/src/page/new_post/: chat.rs  image.rs  new_post_app_bar.rs  poll.rs
frontend/src/util/: api_client.rs  cookie.rs
shared/domain/: Cargo.toml
shared/domain/src/: ids.rs  lib.rs  post.rs  user.rs
shared/endpoint/: Cargo.toml
shared/endpoint/src/: lib.rs
shared/endpoint/src/post/: endpoint.rs  types.rs
shared/endpoint/src/user/: endpoint.rs  types.rs
src/: main.rs
