[workspace]
# NOTE cargo commands will operate on all `default-members` listed here
default-members = [
  "backend/server",
  "backend/crypto",
  "backend/query",
  "frontend",
  "shared/cookie",
  "shared/domain",
]
members = [
  "backend/server",
  "backend/crypto",
  "backend/query",
  "frontend",
  "shared/cookie",
  "shared/domain",
  "tools/project-init",
]
