[package]
name = "uchat_domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nutype = { version = "0.1.1", features = ["serde1"] }
once_cell = "1"
regex = "1"
serde = { version = "1.0.166", features = ["derive"] }
thiserror = "1"
uuid = { version = "1.4.0", features = ["v4", "serde", "js"] }

# backend
diesel-derive-newtype = {version = "2.1.0", optional = true }


[dependencies.diesel]
version = "2.1.0"
features = ["postgres", "uuid", "chrono", "serde_json", "postgres_backend", "i-implement-a-third-party-backend-and-opt-into-breaking-changes"] 
default-features = false
optional = true

# ? Since diesel is an optional dependency, diesel will only be installed 
# ? if a crate adds the `query` feature to its dependency on `diesel`.
[features]
query = ["dep:diesel", "dep:diesel-derive-newtype"]
